@@ -12,7 +12,6 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
-import lombok.RequiredArgsConstructor;
 import lombok.val;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -78,8 +77,7 @@ public class CasConfigurationMetadataCatalog {
                 }
                 return true;
             })
-            .filter(entry -> query.getQueryFilter().test(entry.getValue()))
-            .collect(Collectors.toList());
+            .filter(entry -> query.getQueryFilter().test(entry.getValue())).toList();
 
         val properties = allProperties
             .stream()
@@ -180,17 +178,6 @@ public class CasConfigurationMetadataCatalog {
     /**
      * The type Cas properties container.
      */
-    @RequiredArgsConstructor
-    public static class CasPropertiesContainer {
-        private final TreeSet<CasReferenceProperty> properties;
-
-        /**
-         * Properties list.
-         *
-         * @return the list
-         */
-        public TreeSet<CasReferenceProperty> properties() {
-            return this.properties;
-        }
+    public record CasPropertiesContainer(TreeSet<CasReferenceProperty> properties) {
     }
 }
